# homeworks

homework_2/fortune_teller/: fortune_teller.cpp
homework_3/guessing_game/: guessing_game.cpp
homework_4/no_strings_attached/: .clang-format  CMakeLists.txt  readme.md
homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  split_string.cpp  split_string.h  split_string_test.cpp  trim_string.cpp  trim_string.h  trim_string_test.cpp
